2009-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Remove unused code for holding reference counts
	in an external map.

2009-03-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPURLHandle.m: Implement new mechanism for handling
	SOAP responses with HTTP status 500.  Interim measure lntil the
	NSURLConnection family of class is more complete.

2009-03-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBundle.m (-localizedStringForKey:value:table): Correct
	output when NSShowNonLocalizedStrings is YES.

2009-02-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLProtocol.m:
	Fix for retry with authentication based on patch by Philippe Roussel

2009-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueCoding.m:
	Fix for bug #25720 as suggested by Michael Johnston

2009-02-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCharacterSetData.h:
	* Source/GSRunLoopWatcher.h:
	* Source/GSRunLoopWatcher.m:
	* Source/GSRunLoopCtxt.h:
	Add missing copyright/license comments.

2009-02-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUndoManager.m: Revert last change (to match OSX 10.5)
	Also rework a little to recreate undocumented OSX behavior of
	implicitly creating a top-level undo group if -beginUndoGroup
	is called for a manager configured with groupByEvent.

2009-02-23  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSIndexPath.m:
	* Source/GSSocketStream.h:
	* Source/NSTimeZone.m:
	* Source/NSNetServices.m:
	* Source/NSURLCredential.m:
	* Source/GSSocketStream.m:
	* Source/NSURLAuthenticationChallenge.m:
	* Source/NSCalendarDate.m:
	* Source/NSPropertyList.m:
	* Source/GSConcreteValueTemplate.m:
	* Source/NSAffineTransform.m:
	* Source/NSConcretePointerFunctions.h:
	* Source/NSPathUtilities.m:
	* Source/NSScanner.m:
	* Source/NSProcessInfo.m:
	* Source/NSDistributedNotificationCenter.m:
	* Source/NSNotificationQueue.m:
	* Source/NSGeometry.m:
	* Source/NSConcretePointerFunctions.m:
	* Source/NSRunLoop.m: